# opsPilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  render.yaml  test.txt  test_apis.py  test_models.py  test_mongo.py  test_mongo_trace.py  test_motor.py
ai/: __init__.py  config.py  fallbacks.py  llm_factory.py
ai/agents/: __init__.py  compliance_agent.py  copilot_agent.py  maintenance_agent.py  orchestrator.py  rca_agent.py  report_agent.py
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  run_local.ps1  run_worker.ps1  run_worker.py  test_gaps.py
backend/alembic/: env.py
backend/alembic/versions/: cb7d0983ef65_initial_migration.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: __init__.py  health.py
backend/app/api/v1/: __init__.py  assets.py  auth.py  compliance.py  copilot.py  dashboard.py  documents.py  graph.py  incidents.py  inspections.py  maintenance.py  rca.py  reports.py  router.py  settings.py
backend/app/core/: __init__.py  events.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/db/: __init__.py  chroma_client.py  neo4j_client.py  pinecone_client.py  session.py
backend/app/models/: __init__.py  asset.py  audit_log.py  base.py  conversation.py  document.py  incident.py  inspection.py  maintenance.py  report.py  user.py
backend/app/repositories/: __init__.py  asset_repo.py  base.py  conversation_repo.py  document_repo.py  incident_repo.py  inspection_repo.py  maintenance_repo.py  report_repo.py  user_repo.py
backend/app/schemas/: __init__.py  asset.py  auth.py  common.py  copilot.py  document.py  graph.py  incident.py  inspection.py  maintenance.py  report.py  user.py
backend/app/services/: __init__.py  asset_service.py  auth_service.py  compliance_service.py  dashboard_service.py  document_service.py  incident_service.py  maintenance_service.py  report_service.py  settings_service.py  stubs.py
backend/app/utils/: __init__.py  file_utils.py
frontend/: .env.production  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: generate_docs.py  test_providers.py
worker/: Dockerfile  __init__.py  celery_app.py
(+51 files in other folders)
