[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opspilot-backend"
version = "0.1.0"
description = "OpsPilot — Industrial Knowledge Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
    # ── Web Framework ────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # ── Database (MongoDB) ───────────────────────
    "motor>=3.4.0",
    "beanie>=1.26.0",
    "dnspython>=2.6.1",

    # ── Validation & Settings ────────────────────
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    "email-validator>=2.1.0",

    # ── Auth ─────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # ── AI / LLM ─────────────────────────────────
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-groq>=0.1.0",
    "langgraph>=0.2.0",
    "openai>=1.35.0",
    "google-generativeai>=0.8.0",

    # ── Vector & Graph DB ────────────────────────
    "pinecone-client>=4.0.0",
    "neo4j>=5.20.0",

    # ── Document Processing ──────────────────────
    "pytesseract>=0.3.10",
    "pymupdf>=1.24.0",
    "pdf2image>=1.17.0",
    "Pillow>=10.3.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",

    # ── Task Queue ───────────────────────────────
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",

    # ── Utilities ────────────────────────────────
    "structlog>=24.1.0",
    "tenacity>=8.3.0",
    "httpx>=0.27.0",
    "aiofiles>=23.2.0",

    # ── SSE ──────────────────────────────────────
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
